--- a/zola/plugin.toml
+++ b/zola/plugin.toml
@@ -5,13 +5,13 @@ name = "zola"
 type = "cli"
 
 [platform.linux]
-download-file = "zola-v0.18.0-x86_64-unknown-linux-gnu.tar.gz"
+download-file = "zola-{version}-x86_64-unknown-linux-gnu.tar.gz"
 
 [platform.macos]
-download-file = "zola-v0.18.0-{arch}-apple-darwin.tar.gz"
+download-file = "zola-{version}-{arch}-apple-darwin.tar.gz"
 
 [platform.windows]
-download-file = "zola-v0.18.0-x86_64-pc-windows-msvc.zip"
+download-file = "zola-{version}-x86_64-pc-windows-msvc.zip"
 
 [install]
 download-url = "https://github.com/getzola/zola/releases/download/v{version}/{download_file}"
